<resources>
    <string name="app_name">FootballProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="custom_text">World\nRating</string>
    <string name="title">Title</string>
    <string name="welcome">welcome</string>
    <string name="table">Table</string>
    <string name="matches">Matches</string>
    <string name="world_rating">World Rating</string>
    <string name="group">Group</string>
    <string name="playoff">Playoff</string>
    <string name="netherlands">Netherlands</string>
    <string name="Number">№</string>
    <string name="name">NAME</string>
    <string name="age">age</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="date">Date</string>
    <string name="_1_8">1/8</string>
    <string name="finals">FINALS</string>
    <string name="_03_12">03/12</string>
    <string name="_18_00">18:00</string>
    <string name="del">-</string>
    <string name="a1">A1</string>
    <string name="b1">B1</string>
    <string name="kyrgyzstan">Kyrgyzstan</string>
    <string name="_20_02_2020">20.02.2020</string>
    <string name="referee">Referee</string>
    <string name="refereename">refereeName</string>
    <string name="stadium">Stadium</string>
    <string name="namestadium">NameStadium</string>
    <string name="veneu_of_the_match">Veneu of the match</string>
    <string name="qatar">Qatar</string>
    <string name="capacity">Capacity</string>
    <string name="_80000">80000</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="goals">Goals</string>
    <string name="corners">Corners</string>
    <string name="attacks">Attacks</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="penalties">Penalties</string>
    <string name="country">COUNTRY</string>
    <string name="pts">PTS</string>
    <string name="skip">Skip</string>

</resources>