<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient"
    tools:context=".fragment.LineupFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">



        <LinearLayout
            android:id="@+id/linear_table"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_main_fragment2"
            android:layout_marginStart="8dp">
            
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/inter"
                android:text="@string/table"
                android:layout_marginStart="24dp"/>
            
            
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_matches"
            android:layout_width="140dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_main_fragment"
            android:layout_marginStart="4dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/inter"
                android:textSize="30sp"
                android:text="@string/matches"
                android:layout_marginStart="10dp"/>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear_rating"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_main_fragment2"
            android:layout_marginStart="4dp">


            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:fontFamily="@font/inter"
                android:text="@string/world_rating"
                android:layout_marginStart="14dp"/>


        </LinearLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>